# latindictionary-io

./: LICENSE.txt  README.md  examples.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
latindictionary_io/: __init__.py  _base.py  async_client.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_async_client.py  test_base.py  test_client.py  test_exceptions.py  test_models.py
