[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latindictionary-io"
version = "1.0.0"
description = "Python client for the latindictionary.io API — Latin↔English translation, word inspection, inflection tables, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Theodore Tarr", email = "support@latindictionary.io" },
]
keywords = [
    "latin",
    "dictionary",
    "translation",
    "latin-dictionary",
    "latindictionary",
    "nlp",
    "api-client",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://www.latindictionary.io"
Documentation = "https://github.com/latindictionary/latindictionary-io#readme"
Repository = "https://github.com/latindictionary/latindictionary-io"
Issues = "https://github.com/latindictionary/latindictionary-io/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
